--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         html, body, * { padding: 0; margin: 0}
       </style>
       <link rel="icon" href="assets/favicon.svg" type="image/svg">
+      <meta charset="UTF-8" />
     </head>
     <body>
         <div id="app"></div>
